[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = {version="0.4.38", features = ["serde"]}
reed-solomon-erasure = "6.0.0"
serde = {version= "1.0.214", features = ["derive"]}
tokio = {version = "^1.41.0", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "io-util", "time"]}
